<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/start_end_margin"
    android:paddingTop="@dimen/top_margin"
    android:paddingEnd="@dimen/start_end_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_relevant_information" />

    <LinearLayout
        android:id="@+id/conceive_type_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_way_of_conception" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/conceive_type_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/conceive_type" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gestational_age_type_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestational_age_type" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/gestational_age_type_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/gestational_age_type" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpd_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/date_bg"
            android:drawableEnd="@drawable/date_bg"
            android:hint="请选择日期"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/len_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lenTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpd_len" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/lenEt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/lenUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="mm" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cal" />
</LinearLayout>